<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_last_exercise"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    tools:context="com.example.fraserbeaton.headsupchapter5.LastExercise"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp">

    <TextView
        android:layout_row="0"
        android:layout_columnSpan="2"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/TeaTempMessage"/>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:text="@string/Temperature"
        />

    <ToggleButton
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_row="1"
        android:layout_column="1"
        android:textOn="@string/hot"
        android:textOff="@string/cold"
        />

    <CheckBox
        android:id="@+id/milk_checkbox"
        android:text="@string/milk"
        android:layout_columnSpan="2"
        android:layout_row="2"
        android:layout_column="0"
        />

    <CheckBox
        android:id="@+id/sugar_checkbox"
        android:text="@string/sugar"
        android:layout_columnSpan="2"
        android:layout_row="3"
        android:layout_column="0"
        />

    <CheckBox
        android:id="@+id/lemon_checkbox"
        android:text="@string/lemon"
        android:layout_columnSpan="2"
        android:layout_row="4"
        android:layout_column="0"
        />
</GridLayout>
